--- a/src/templates/settings.twig
+++ b/src/templates/settings.twig
@@ -24,11 +24,13 @@
     options: optionsSections,
 }) }}
 
-{{ forms.multiselectField({
-    label: "Allowed Categories"|t,
-    instructions: "Choose which categories the relation widget will show on. Leave blank for all categories"|t,
-    id: 'allowedCategories',
-    name: 'allowedCategories',
-    values: settings['allowedCategories'],
-    options: optionsCategories,
-}) }}
+{% if optionsCategories|length %}
+    {{ forms.multiselectField({
+        label: "Allowed Categories"|t,
+        instructions: "Choose which categories the relation widget will show on. Leave blank for all categories"|t,
+        id: 'allowedCategories',
+        name: 'allowedCategories',
+        values: settings['allowedCategories'],
+        options: optionsCategories,
+    }) }}
+{% endif %}
